<resources>
    <string name="app_name">DiveBox</string>
    <string name="main_activity_name">DiveBox</string>
    <string name="login_activity_name">Login to DiveBox</string>
    <string name="create_dive_activity_name">Create A New Dive</string>
    <string name="view_dive_activity_name">View Dive</string>
    <string name="action_settings">Settings</string>
    <string name="loading">Loading...</string>

    <!-- Buttons -->
    <string name="create_dive_submit">Create Dive</string>
    <string name="delete_dive_submit">Delete Dive</string>
    <string name="BUTTON_OK">OK</string>

    <!-- SharedPref file -->
    <string name="SHARED_PREFERENCE_FILE_KEY">divebox</string>
    <string name="SHARED_PREF_USERNAME_KEY">username</string>
    <string name="SHARED_PREF_PHOTO_URL_KEY">photo</string>
    <string name="SHARED_PREF_EMAIL_KEY">email</string>
    <string name="SHARED_PREF_ID_KEY">id</string>
    <string name="SHARED_PREF_GOOGLE_ID_KEY">googleid</string>
    <string name="SHARED_PREF_DIVE_CERT">dive_cert</string>
    <string name="SHARED_PREF_DIVE_LEVEL">dive_level</string>
    <string name="SHARED_PREF_WEIGHT">weight</string>
    <string name="SHARED_PREF_WEIGHT_METRIC">kg_lb</string>

    <!-- Messages -->
    <string name="MESSAGE_DIVE_CREATE">Dive Created!</string>
    <string name="MESSAGE_DIVE_DELETED">Dive Deleted!</string>

    <!-- Error Messages -->
    <string name="MAP_UNAVAILABLE">Map Unavailable!</string>
    <string name="MAP_PERMISSION_UNAVAILABLE">Map Permission Failed</string>
    <string name="LOCATION_UNAVAILABLE">Location Unavailable!</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <!-- Labels -->
    <string name="NUMBER_OF_DIVES"># Dives: </string>

    <!-- Twitter -->
    <string name="CONSUMER_KEY"># Dives: </string>

    <!-- DIVING CERTIFICATION INFORMATION -->
    <string name="DIVE_CERT_PROMPT">Select one</string>

    <string-array name="DIVE_CERTIFICATIIONS">
        <item>PADI</item>
        <item>SSI</item>
    </string-array>

    <string-array name="PADI_DIVE_LEVELS">
        <item>Open Water</item>
        <item>Advanced Open Water</item>
        <item>Rescue Diver</item>
        <item>Dive Master</item>
        <item>Master Scuba Diver</item>
        <item>Dive Instructor</item>
    </string-array>

    <string-array name="SSI_DIVE_LEVELS">
        <item>Open Water</item>
        <item>Specialty Diver</item>
        <item>Advanced Open Water</item>
        <item>Master Diver</item>
        <item>Dive Guide</item>
    </string-array>

    <string-array name="WEIGHT_METRIC_CHOICES">
        <item>lbs</item>
        <item>kg</item>
    </string-array>

    <!-- Dive Dialog -->
    <string name="DIVE_CERT">Dive Certification:</string>
    <string name="DIVE_LEVELS">Dive Levels:</string>


    <!-- Date Picker Dialog -->
    <string name="SELECT_DATE">Select Date:</string>


    <!-- Weight Dialog -->
    <string name="WEIGHT">Weight Preference:</string>
    <string name="WEIGHT_METRIC">Metric:</string>
    <string name="KG">kg</string>
    <string name="LBS">lbs</string>

    <!-- Time Picker Dialog -->
    <string name="TIME_IN">Time In:</string>
    <string name="TIME_OUT">Time Out:</string>
    <string name="TIME_ERROR">Dive end time cannot be earlier than dive start time!</string>

    <!-- Air Picker Dialog -->
    <string name="AIR_IN">Air In:</string>
    <string name="AIR_OUT">Air Out:</string>
    <string name="bar">bar</string>
    <string name="psi">psi</string>

    <!--Dive Labels -->
    <string name="label_dive_title">Dive Title:</string>
    <string name="label_entry_info">Entry Info:</string>
    <string name="label_exit_info">Exit Info:</string>
    <string name="label_air_in">Air In:</string>
    <string name="label_air_out">Air Out:</string>
    <string name="label_air_prompt">Choose a value</string>
    <string name="label_time_in">Time In:</string>
    <string name="label_time_prompt">Select a time</string>
    <string name="label_time_out">Time Out:</string>
    <string name="label_comment">Comment:</string>
    <string name="label_comment_prompt">(Describe what you saw, your experience, etc.)</string>
    <string name="label_btm_time">Bottom Time:</string>
    <string name="label_date">Date:</string>
    <string name="label_date_prompt">Select a date</string>

    <!-- Create Dive Bundle Keys -->
    <string name="create_dive_title_key">dive_title</string>
    <string name="create_dive_date_key">date</string>
    <string name="create_dive_air_in_key">air_in</string>
    <string name="create_dive_air_out_key">air_out</string>
    <string name="create_dive_time_in_key">time_in</string>
    <string name="create_dive_time_out_key">time_out</string>
    <string name="create_dive_btm_time_key">btm_time</string>
    <string name="create_dive_comment_key">comment</string>
    <string name="create_dive_lat">lat</string>
    <string name="create_dive_lng">lng</string>

    <!--Widget Labels -->
    <string name="label_widget_time_since_label">Last Dive:</string>
    <string name="label_widget_ago_label"> ago</string>
    <string name="label_widget_btm_time_label">Bottom Time:</string>
    <string name="label_widget_depth_label">Dive Depth:</string>
    <string name="label_widget_no_value">(No Info)</string>

    <!-- Content Descriptors -->
    <string name="cd_create_dive_select_date">select date of dive</string>
    <string name="cd_create_dive_select_time">select time of dive</string>
    <string name="cd_create_dive_select_air">select air pressure of dive</string>
    <string name="cd_profile_select_dive_cert">select dive certification</string>
    <string name="cd_profile_select_weight">select weight preference</string>



</resources>
